Add lti passport validation

--- a/annoto/static/html/annoto.html
+++ b/annoto/static/html/annoto.html
@@ -1,2 +1,9 @@
 <div class="annoto_block">
+{% if is_author_view and error %}
+    <div class="annoto-{{ error.type }}">
+      {% for msg in error.messages %}
+        <p>{{ msg }}</p>
+      {% endfor %}
+    </div>
+{% endif %}
 </div>
