--- a/annoto/static/html/annoto.html
+++ b/annoto/static/html/annoto.html
@@ -1,4 +1,4 @@
-<div class="annoto_block">
+<div class="annoto-block">
 {% if is_author_view and error %}
     <div class="annoto-{{ error.type }}">
       {% for msg in error.messages %}
