--- a/annoto/static/html/annoto.html
+++ b/annoto/static/html/annoto.html
@@ -1,9 +1,12 @@
 <div class="annoto-block">
-{% if is_author_view and error %}
+{% if is_author_view %}
+    Annoto XBlock
+    {% if error %}
     <div class="annoto-{{ error.type }}">
       {% for msg in error.messages %}
         <p>{{ msg }}</p>
       {% endfor %}
     </div>
+    {% endif %}
 {% endif %}
 </div>
